--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,23 @@
-
-/* Your CSS Code here. */
+.holder{
+	height:100vh;
+	width:100vw;
+	display:flex;
+	flex-direction:row;
+	justify-content:space-evenly;
+	flex-wrap:wrap;
+	
+}
+.item{
+	height:100px;
+	width:100px;
+	
+}
+#red{
+	background:red;
+}
+#blue{
+	background:blue;
+}
+#green{
+	background:green;
+}
